# marchmadness2026

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  PLAN.md  QUICKSTART.md  README.md  cli.py  config.yaml  pyproject.toml
contest/: __init__.py  schedule.py
data/: bracket.json  feature_engineering.py  kenpom.py  kenpom_2026.csv  live_bracket.py  seed_history.py  vegas_historical.csv
data/scrapers/: barttorvik.py  espn_api.py  espn_bpi.py  kaggle_data.py  vegas_lines.py
docs/: generate_diagram.py
entries/: generator.py  manager.py
models/: backtest.py  evaluate.py  predict.py  train.py
optimizer/: aco.py  analytical.py  constants.py  coverage.py  differentiation.py  distribution.py  dp.py  kelly.py  nash.py  ownership.py  portfolio.py  survival.py
samples/: advise_output.txt  analyze_output.txt  optimize_output.txt
simulation/: analysis.py  engine.py
tests/: test_aco.py  test_analytical.py  test_backtest.py  test_coverage.py  test_distribution.py  test_dp.py  test_external_data.py  test_kenpom.py  test_live_bracket.py  test_manager_days.py  test_models.py  test_nash.py  test_optimizer.py  test_ownership.py  test_schedule.py  test_simulation.py  test_vegas.py
visualization/: charts.py
