[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marchmadness2026"
version = "0.1.0"
description = "March Madness Survivor Pool Optimizer"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "scipy>=1.11",
    "pyyaml>=6.0",
    "click>=8.1",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "requests>=2.31",
    "lightgbm>=4.0",
    "catboost>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.8",
]

[project.scripts]
marchmadness = "cli:main"

[tool.setuptools]
py-modules = ["cli"]

[tool.setuptools.packages.find]
include = ["data*", "models*", "optimizer*", "simulation*", "entries*", "contest*"]

[tool.ruff]
line-length = 100
exclude = ["build"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",   # line length handled by formatter
    "E741",   # ambiguous variable names (common in math-heavy code)
    "B007",   # unused loop variable (common in iteration patterns)
    "B905",   # zip strict param (noisy for our codebase)
    "RUF012", # mutable class defaults (intentional for config)
    "RUF059", # unpacked unused vars (common in destructuring)
]

[tool.ruff.lint.isort]
known-first-party = ["data", "models", "optimizer", "simulation", "entries", "contest"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
